--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <title>Penguin Knight</title>
     <style>
         body {
@@ -68,20 +68,39 @@
 
 <body>
 
-        <nav>
-                <div class="nav-wrapper grey darken-3">
-                  <a href="#!" class="brand-logo">Penguin Knight</a>
-                  <ul class="right hide-on-med-and-down">
-                    <li><a class="waves-effect waves-light btn orange accent-4">Sign-In</a></li>
+  <nav class="navbar navbar-dark bg-dark">
+    <a class="navbar-brand text-white">Penguin Knight</a>
+    <form class="form-inline text-white">
 
-                    <li><a class="waves-effect waves-light btn-large orange accent-4">Hi-Score</a></li>
-                  </ul>
-                </div>
-              </nav>
+        <button type="button" class="btn btn-warning btn-lg">Hi-Score</button>
 
-                  </ul>
-                </div>
-              </nav>
+    </form>
+  </nav>
+
+
+  <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
+      Launch demo modal
+    </button>
+  <!-- Modal -->
+<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="exampleModalLabel">Summary</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          ...
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Play Again</button>
+          <button type="button" class="btn btn-primary">Submit Score</button>
+        </div>
+      </div>
+    </div>
+  </div>
 
 
 
@@ -91,7 +110,9 @@
   
 
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 </body>
 
 </html>
