--- a/app/public/index.html
+++ b/app/public/index.html
@@ -2,6 +2,8 @@
 <html>
 
 <head>
+      <!-- Added link to the jQuery Library -->
+
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <title>Penguin Knight</title>
     <style>
@@ -62,6 +64,10 @@
             background-repeat: no-repeat;
             
         }
+
+        button {
+          padding: 0px 20px 0px 20px;
+        }
     </style>
     <script type="module" src="/js/main.js"></script>
 </head>
@@ -72,35 +78,85 @@
     <a class="navbar-brand text-white">Penguin Knight</a>
     <form class="form-inline text-white">
 
+  <!-- Button trigger modal -->
+  <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#signIn">
+      Sign-In
+    </button>
+
+    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#signUp">
+        Sign-Up
+      </button>
+
         <button type="button" class="btn btn-warning btn-lg">Hi-Score</button>
 
     </form>
   </nav>
 
 
-  <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
-      Launch demo modal
-    </button>
+  
   <!-- Modal -->
-<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal fade" id="signIn" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog" role="document">
       <div class="modal-content">
         <div class="modal-header">
-          <h5 class="modal-title" id="exampleModalLabel">Summary</h5>
+          <h5 class="modal-title" id="exampleModalLabel">Log In</h5>
           <button type="button" class="close" data-dismiss="modal" aria-label="Close">
             <span aria-hidden="true">&times;</span>
           </button>
         </div>
         <div class="modal-body">
-          ...
+            <form id="signin" name="signin" method="post" action="signin">
+                <div class="form-group">
+                  <label for="username">UserName:</label>
+                  <input name="username" type="text" class="form-control" placeholder="Username">
+                </div>
+                <div class="form-group">
+                  <label for="password">Password:</label>
+                  <input name="password" type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+                </div>
+                <button type="submit" value="Sign In" class="btn btn-primary">Submit</button>
+              </form>
         </div>
         <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-dismiss="modal">Play Again</button>
-          <button type="button" class="btn btn-primary">Submit Score</button>
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+
         </div>
       </div>
     </div>
   </div>
+
+    <!-- Modal -->
+    <div class="modal fade" id="signUp" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title" id="exampleModalLabel">Create Account</h5>
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+              </button>
+            </div>
+            <div class="modal-body">
+                <form id="signup" name="signup" method="post" action="signup">
+                    <div class="form-group">
+                      <label for="username">UserName:</label>
+                      <input name="username" type="text" class="form-control" placeholder="Username">
+                    </div>
+                    <div class="form-group">
+                      <label for="password">Password:</label>
+                      <input name="password" type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+                    </div>
+                    <button type="submit" value="Sign In" class="btn btn-primary">Submit</button>
+                  </form>
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+    
+            </div>
+          </div>
+        </div>
+      </div>
+
+
 
 
 
@@ -110,7 +166,7 @@
   
 
 
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 </body>
